改用 PHP 內建的 session 機制 /  week8-4 done.

--- a/homeworks/week7/hw3/css/boots_layout.css
+++ b/homeworks/week7/hw3/css/boots_layout.css
@@ -1,3 +1,12 @@
 div#main-comment-box {
   border-width: medium;
 }
+
+.row {
+    margin-right: 0px;
+    margin-left: 0px;
+}
+
+.col-10 {
+    margin: 5px;
+}
