--- a/homeworks/week4/hw3/Stylus_Postcss/streams.styl
+++ b/homeworks/week4/hw3/Stylus_Postcss/streams.styl
@@ -1,12 +1,12 @@
-colorA = rgba(106,224,216,1)
-colorB = rgba(156,194,247,1)
-colorC = rgba(98,212,239,1)
+greenA = rgba(106,224,216,1)
+purpleA = rgba(156,194,247,1)
+blueA = rgba(98,212,239,1)
 greyA = rgb(190, 186, 186)
 
 
 body 
-  background: colorA
-  background: linear-gradient(0deg, colorA 0%, colorB 50%, colorC 100%)
+  background: greenA
+  background: linear-gradient(0deg, greenA 0%, purpleA 50%, blueA 100%)
 
 .selector 
   margin: 10px auto
