show all comments.

--- a/homeworks/week11/hw1/views/login.pug
+++ b/homeworks/week11/hw1/views/login.pug
@@ -15,7 +15,7 @@ html(lang="en")
         .card-header
           h1.text-center 登入
 
-          form(action="./login" method="post")
+          form(action="./authLogin" method="post")
             .card-body
               .form-row
                 .col-md-6.mb-3
