--- a/homeworks/week11/hw1/views/index.pug
+++ b/homeworks/week11/hw1/views/index.pug
@@ -1,7 +1,21 @@
+extends layout
+include mixin/_form
+include mixin/_comments
+include mixin/_pages
 
-h1 Hello, #{username} ! 你已經登入
-  a(href="./boots_layout.pug") 前往 Minty 留言版
-h1 未登入
-  a(href="./verify.pug") 登入 （註冊）前往頁面
-  a(href="./boots_layout.pug") 前往 Minty 留言版
 
+block commentForm
+  if (user)
+    h2 not login
+    
+  else
+    +commentForm({username: "heyman"})
+    #main-comment-box
+
+block comments
+    +allComments(cardList)
+
+
+block pages
+  //- h2 yosdfasdf
+  +pages(currentPage, pages)
