--- a/homeworks/week11/hw1/views/index.pug
+++ b/homeworks/week11/hw1/views/index.pug
@@ -5,7 +5,7 @@ include mixin/_pages
 
 
 block commentForm
-  if (user)
+  if (!user)
     h2 not login
     
   else
@@ -13,7 +13,7 @@ block commentForm
     #main-comment-box
 
 block comments
-    +allComments(cardList)
+    +allComments(commentsObj)
 
 
 block pages
