--- a/homeworks/week11/hw1/views/mixin/_subComments.pug
+++ b/homeworks/week11/hw1/views/mixin/_subComments.pug
@@ -1,18 +1,19 @@
 mixin allSubComments(mainAuthor, subs)
-
+  
   each sub in subs
+    - let { sub_user, sub_nk, content, createdAt } = sub
+
     .row.justify-content-center
-      if (sub.user_id === mainAuthor.id)
+      if (user_id === mainAuthor.id)
         .card.border-danger.col-8.m-1
           .card-body
-            h4.card-title.text-center Author: #{mainAuthor.nickname} 
-            p.card-text reply at: #{sub.createdAt}
-            p.card-text #{sub.content}
+            h4.card-title.text-center Author: #{sub_user} （ #{sub_nk} ）：
+            p.card-text reply at: #{createdAt}
+            p.card-text #{content}
 
       else
         .card.border-warning.col-10.m-1
           .card-body
-            h4.card-title  #{sub.user_id} 
-            p.card-text reply at: #{sub.createdAt}
-            h5.card-title #{sub.userId}
-            p.card-text #{sub.content}
+            h5.card-title #{sub_user} （ #{sub_nk} ）：
+            p.card-text reply at: #{createdAt}
+            p.card-text #{content}
