--- a/homeworks/week11/hw1/views/index.pug
+++ b/homeworks/week11/hw1/views/index.pug
@@ -5,12 +5,11 @@ include mixin/_pages
 
 
 block commentForm
-  if (!user)
-    h2 not login
+  if (!currentUser)
     
   else
-    +commentForm({username: "heyman"})
-    #main-comment-box
+    +commentForm(currentUser)
+    
 
 block comments
     +allComments(commentsObj)
