--- a/homeworks/week11/hw1/views/layout.pug
+++ b/homeworks/week11/hw1/views/layout.pug
@@ -14,13 +14,10 @@ html(lang="en")
     block header
     
       nav.navbar.fixed-top.navbar-expand-lg.navbar-dark.bg-primary
-        a.navbar-brand(href="/") 留言板
+        a.navbar-brand(href="/comments") 留言板
 
-        
-        //- user 資訊要給 layout
-
-        if (current_user)
-          span.navbar-text 已登入 ✅  Hello! #{current_user} ( #{nickname} )
+        if (currentUser)
+          span.navbar-text 已登入 ✅  Hello! #{currentUser} ( #{nickname} )
         else
           span.navbar-text 未登入 ❌  要登入才能留言
           
@@ -29,28 +26,31 @@ html(lang="en")
         .collapse.navbar-collapse#navbarColor01
           ul.navbar-nav.mr-auto
 
-            if (current_user == 1)
-
-              li.nav-item
-                a.nav-link(href='/logout')
-                  i.fas.fa-sign-out-alt.fa-2x(style="color:green")
+            if (currentUser)
+              .d-flex.justify-content-center
+                li.nav-item
+                  a.nav-link(href='/logout')
+                    i.fas.fa-sign-out-alt.fa-2x(style="color:green")
 
             else
-
-              li.nav-item
-                a.nav-link(href="/login")
-                  i.fas.fa-sign-in-alt.fa-2x(style="color:green")
-
+              .d-flex.justify-content-center
+                li.nav-item
+                  a.nav-link(href="/login")
+                    i.fas.fa-sign-in-alt.fa-2x(style="color:green")
+                
+    
     .container
       block commentForm
 
       block comments
       
       block pages
+    
+    .message-box
 
 
     script(src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous")  
     script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous")
     script(src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous")
-    script(src="./script/main.js")
+    script(src="/script/main.js")
     
