--- a/homeworks/week11/hw1/views/signup.pug
+++ b/homeworks/week11/hw1/views/signup.pug
@@ -15,7 +15,7 @@ html(lang="en")
         .card-header
           h1.text-center 註冊
 
-          form(action="./signup" method="post")
+          form(method="post")
             .card-body
               .form-row
                 .col-md-6.mb-3
