--- a/homeworks/week11/hw1/views/mixin/_authorBtn.pug
+++ b/homeworks/week11/hw1/views/mixin/_authorBtn.pug
@@ -19,7 +19,6 @@ mixin EditDeleteBtn(content, id)
                 label.mb-0(for='main_comment') 主留言
                 textarea.form-control(rows='2' name='main_comment' required='') #{content}
               .modal-footer
-                //- input.comment_id(type='hidden' name='comment_id' value=`${id}`)
                 button.btn.btn-primary.editComment(type='button'  data-dismiss='modal' data-comment_id=`${id}`) 送出
                 button.btn.btn-secondary(type='button' data-dismiss='modal') 取消
     div
@@ -39,6 +38,5 @@ mixin EditDeleteBtn(content, id)
                 p #{content}
                 span(aria-hidden='true') 子留言也會一併刪除。刪除之後無法復原，確定嗎？
               .modal-footer
-                input(type='hidden' name='comment_id' value=`${id}`)
-                button.btn.btn-danger(type='submit' data-dismiss='modal') 確定
+                button.btn.btn-danger.deleteComment(type='submit' data-dismiss='modal' data-comment_id=`${id}`) 確定
                 button.btn.btn-info(type='button' data-dismiss='modal') 取消
