--- a/homeworks/week11/hw1/public/css/boots_layout.css
+++ b/homeworks/week11/hw1/public/css/boots_layout.css
@@ -1,3 +1,7 @@
+.container {
+    padding-top: 2em;
+}
+
 
 .row {
     margin-right: 0px;
@@ -41,4 +45,15 @@ i.fas.fa-plus-circle:hover {
     bottom: 0;
     text-align: center;
     width: 90%;
+}
+
+.far.fa-comments {
+    font-weight: bold;
+    transition: .2s;
+}
+
+.far.fa-comments:hover {
+    font-size: 1.1em;
+    font-weight: normal;
+    /* transition: .3s; */
 }
