--- a/homeworks/week11/hw1/views/index.pug
+++ b/homeworks/week11/hw1/views/index.pug
@@ -1,7 +1,36 @@
 extends layout
+include mixin/_titles
 include mixin/_form
 include mixin/_comments
 include mixin/_pages
+
+block header
+    
+      nav.navbar.fixed-top.navbar-expand-lg.navbar-dark.bg-primary
+        a.navbar-brand(href="/comments") 留言板
+
+        if (currentUser)
+          span.navbar-text 已登入 ✅  Hello! #{currentUser} ( #{currentUserNk} )
+        else
+          span.navbar-text 未登入 ❌  要登入才能留言
+          
+        button.navbar-toggler(type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation")
+          span.navbar-toggler-icon
+        .collapse.navbar-collapse#navbarColor01
+          ul.navbar-nav.mr-auto
+            +titles()
+
+            if (currentUser)
+              .d-flex.justify-content-center
+                li.nav-item
+                  a.nav-link(href='/logout')
+                    i.fas.fa-sign-out-alt.fa-2x(style="color:green")
+
+            else
+              .d-flex.justify-content-center
+                li.nav-item
+                  a.nav-link(href="/login")
+                    i.fas.fa-sign-in-alt.fa-2x(style="color:green")
 
 
 block commentForm
