--- a/homeworks/week11/hw1/views/layout.pug
+++ b/homeworks/week11/hw1/views/layout.pug
@@ -8,35 +8,11 @@ html(lang="en")
     link(rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.3/minty/bootstrap.min.css" integrity="sha384-Qt9Hug5NfnQDGMoaQYXN1+PiQvda7poO7/5k4qAmMN6evu0oDFMJTyjqaoTGHdqf" crossorigin="anonymous")
     link(rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous")
     link(rel="stylesheet" href="/css/boots_layout.css")
-    title Minty board
+    title #{title}
 
   body.mt-5
     block header
     
-      nav.navbar.fixed-top.navbar-expand-lg.navbar-dark.bg-primary
-        a.navbar-brand(href="/comments") 留言板
-
-        if (currentUser)
-          span.navbar-text 已登入 ✅  Hello! #{currentUser} ( #{currentUserNk} )
-        else
-          span.navbar-text 未登入 ❌  要登入才能留言
-          
-        button.navbar-toggler(type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation")
-          span.navbar-toggler-icon
-        .collapse.navbar-collapse#navbarColor01
-          ul.navbar-nav.mr-auto
-
-            if (currentUser)
-              .d-flex.justify-content-center
-                li.nav-item
-                  a.nav-link(href='/logout')
-                    i.fas.fa-sign-out-alt.fa-2x(style="color:green")
-
-            else
-              .d-flex.justify-content-center
-                li.nav-item
-                  a.nav-link(href="/login")
-                    i.fas.fa-sign-in-alt.fa-2x(style="color:green")
                 
     
     .container
