hw3 done / 缺失修正

--- a/homeworks/week11/hw1/views/mixin/_form.pug
+++ b/homeworks/week11/hw1/views/mixin/_form.pug
@@ -41,6 +41,6 @@ mixin subCommentForm(currentUser, comment_id)
                 textarea.form-control(rows='5' name='sub_comment' required='true')
               .modal-footer
                 //- input.comment_id(type='hidden' name='comment_id' value=`${comment_id}`)
-                button#submitSubComment.btn.btn-primary(type='submit' data-dismiss='modal' data-comment_id=`${comment_id}`) 送出
+                button.submitSubComment.btn.btn-primary(type='submit' data-dismiss='modal' data-comment_id=`${comment_id}`) 送出
               
 
