--- a/react-practice/form/src/TwitForm.css
+++ b/react-practice/form/src/TwitForm.css
@@ -130,16 +130,40 @@ body {
 
 .warningMSG {
   color: #db4437;
-  margin: 15px 8px 0 0;
+  margin: 0;
   padding: 5px 0;
   font-size: 16px;
+  /* border: none; */
 	width: 100%;
+	/* border-bottom: 1px solid rgba(0,0,0,0.12); */
 }
 
 .note {
   margin: 20px 0 0 17px;
   font-size: 12px;
   color: rgba(0,0,0,0.5);
+}
+
+
+
+.App {
+  /* text-align: center; */
+}
+
+
+.App-header {
+  /* background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white; */
+}
+
+.App-link {
+  /* color: #61dafb; */
 }
 
 .toggleBtn {
